--- a/front_end/package.json
+++ b/front_end/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/jwt-decode": "^2.2.1",
     "@types/yup": "^0.29.14",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
